fixes some spacing issues on the lists show page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,7 @@
     margin-top: 10px;
     float: right;   
 }
+
+.add-item {
+    margin-right: 5px;
+}
